Improved the unit tests