@@ -1,66 +1,96 @@
 package org.togetherjava.tjbot.commands.mediaonly;
 
 import net.dv8tion.jda.api.EmbedBuilder;
+import net.dv8tion.jda.api.MessageBuilder;
 import net.dv8tion.jda.api.entities.Message;
 import net.dv8tion.jda.api.entities.MessageEmbed;
-import net.dv8tion.jda.api.entities.User;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.togetherjava.tjbot.config.Config;
 import org.togetherjava.tjbot.jda.JdaTester;
 
-import java.util.Collections;
+import javax.annotation.Nonnull;
 import java.util.List;
 
 import static org.mockito.Mockito.*;
 
-class MediaOnlyChannelListenerTest {
+final class MediaOnlyChannelListenerTest {
 
     private JdaTester jdaTester;
-    private Message message;
-    private User user;
     private MediaOnlyChannelListener mediaOnlyChannelListener;
 
     @BeforeEach
     void setUp() {
         jdaTester = new JdaTester();
-        message = jdaTester.createMessageSpy();
-        user = jdaTester.getMemberSpy().getUser();
+
         Config config = mock(Config.class);
-        when(config.getMediaOnlyChannelPattern()).thenReturn("memes");
+        when(config.getMediaOnlyChannelPattern()).thenReturn("any");
+
         mediaOnlyChannelListener = new MediaOnlyChannelListener(config);
     }
 
     @Test
-    void validMessagePostWithAttachment() {
-        Message.Attachment attachment = jdaTester.createAttachment("https://test.com", "test",
-                "testContentType", "unitTest");
-        jdaTester.mockMessageAttachments(message, List.of(attachment));
-        sendMessage();
-        verify(message).getAttachments();
+    void deletesMessageWithoutMedia() {
+        // GIVEN a message without media
+        Message message = new MessageBuilder().setContent("any").build();
+
+        // WHEN sending the message
+        MessageReceivedEvent event = sendMessage(message);
+
+        // THEN it gets deleted
+        verify(event.getMessage()).delete();
     }
 
     @Test
-    void validMessagePostWithUrlEmbedded() {
-        MessageEmbed messageEmbed =
-                new EmbedBuilder().setImage("https://9gag.com/gag/a61A238").build();
-        jdaTester.mockMessageEmbeds(message, List.of(messageEmbed));
-        sendMessage();
-        verify(message).getEmbeds();
+    void keepsMessageWithEmbed() {
+        // GIVEN a message with an embed
+        MessageEmbed embed = new EmbedBuilder().setDescription("any").build();
+        Message message = new MessageBuilder().setContent("any").setEmbeds(embed).build();
+
+        // WHEN sending the message
+        MessageReceivedEvent event = sendMessage(message);
+
+        // THEN it does not get deleted
+        verify(event.getMessage(), never()).delete();
     }
 
     @Test
-    void unvalidMessagePostWithOnlyText() {
-        jdaTester.mockMessageDelete(message);
-        jdaTester.mockMessageAttachments(message, Collections.emptyList());
-        sendMessage();
-        verify(message).getAttachments();
+    void keepsMessageWithAttachment() {
+        // GIVEN a message with an attachment
+        Message message = new MessageBuilder().setContent("any").build();
+        List<Message.Attachment> attachments = List.of(mock(Message.Attachment.class));
+
+        // WHEN sending the message
+        MessageReceivedEvent event = sendMessage(message, attachments);
+
+        // THEN it does not get deleted
+        verify(event.getMessage(), never()).delete();
+
     }
 
-    private void sendMessage() {
-        MessageReceivedEvent messageReceivedEvent =
-                jdaTester.createMessageReceivedEvent(message, user);
-        mediaOnlyChannelListener.onMessageReceived(messageReceivedEvent);
+    @Test
+    void sendsAuthorDmUponDeletion() {
+        // GIVEN a message without media
+        Message message = new MessageBuilder().setContent("any").build();
+
+        // WHEN sending the message
+        MessageReceivedEvent event = sendMessage(message);
+
+        // THEN the author receives a DM
+        verify(jdaTester.getPrivateChannelSpy()).sendMessage(any(Message.class));
+    }
+
+    @Nonnull
+    private MessageReceivedEvent sendMessage(Message message) {
+        return sendMessage(message, List.of());
+    }
+
+    @Nonnull
+    private MessageReceivedEvent sendMessage(Message message,
+            List<Message.Attachment> attachments) {
+        MessageReceivedEvent event = jdaTester.createMessageReceiveEvent(message, attachments);
+        mediaOnlyChannelListener.onMessageReceived(event);
+        return event;
     }
 }
